--- a/cinephoria-workspace/angular.json
+++ b/cinephoria-workspace/angular.json
@@ -16,9 +16,7 @@
             "outputPath": "dist/cinephoria-web",
             "index": "projects/cinephoria-web/src/index.html",
             "browser": "projects/cinephoria-web/src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "projects/cinephoria-web/tsconfig.app.json",
             "assets": [
               {
@@ -27,9 +25,13 @@
               }
             ],
             "styles": [
+              "node_modules/bootstrap/scss/bootstrap.scss",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "projects/cinephoria-web/src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ],
             "server": "projects/cinephoria-web/src/main.server.ts",
             "outputMode": "server",
             "ssr": {
@@ -78,10 +80,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "projects/cinephoria-web/tsconfig.spec.json",
             "assets": [
               {
@@ -89,9 +88,7 @@
                 "input": "projects/cinephoria-web/public"
               }
             ],
-            "styles": [
-              "projects/cinephoria-web/src/styles.css"
-            ],
+            "styles": ["projects/cinephoria-web/src/styles.css"],
             "scripts": []
           }
         }
