--- a/cinephoria-workspace/package.json
+++ b/cinephoria-workspace/package.json
@@ -23,7 +23,10 @@
     "@angular/ssr": "^19.1.5",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mariadb": "^3.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
