--- a/cinephoria-workspace/package.json
+++ b/cinephoria-workspace/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
