--- a/cinephoria-workspace/package.json
+++ b/cinephoria-workspace/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mariadb": "^3.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
