--- a/cinephoria-workspace/package.json
+++ b/cinephoria-workspace/package.json
@@ -27,6 +27,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "firebase-admin": "^13.1.0",
+    "firebase-functions": "^6.3.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mariadb": "^3.4.0",
