--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cinephoria-workspace",
   "version": "0.0.0",
+  "type": "commonjs",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
