--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "experimentalDecorators": true,
     "moduleResolution": "bundler",
     "importHelpers": true,
-    "target": "ES2022",
+    "lib": ["ES2023", "DOM"],
+    "target": "ES2023",
     "module": "ES2022",
     "allowSyntheticDefaultImports": true
   },
