--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -13,15 +13,22 @@ RUN npm install
 COPY . .
 
 # Construction de l'application
-RUN npm run build --prod
+RUN npm run build
 
 # Stage 2 : Mettre à disposition un serveur web nginx
 
 # Téléchargement d'une image nginx
 FROM nginx:alpine3.19
 
+# Définir un argument API_URL (avec une valeur par défaut pour éviter les erreurs)
+ARG API_URL=http://backend:3000/api
+
 # Copier le resultat du "build" dans mon serveur
-COPY --from=build /app/dist/cinephoria-web /usr/share/nginx/html
+COPY --from=build /app/dist/cinephoria-web/ /usr/share/nginx/html
+
+# Écrire la variable API_URL dans un fichier JS accessible par Angular
+RUN mkdir -p /usr/share/nginx/html/assets && \
+    echo "window.API_URL='${API_URL}';" > /usr/share/nginx/html/assets/config.js
 
 # Copier la configuration Nginx personnalisée à la place de celle par defaut
 COPY nginx.conf /etc/nginx/conf.d/default.conf
