--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -6,7 +6,13 @@ server {
     index index.html;
 
     location / {
+        index index.html;
         try_files $uri $uri/ /index.html;
+    }
+
+    # Proxy pour l'API du backend
+    location /api/ {
+        rewrite ^/api/(.*) /$1 break;
         proxy_pass http://backend:3000;  # Si ton backend tourne sur un conteneur nommé "backend" et écoute sur le port 3000
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
