--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     depends_on:
       - mariadb
     environment:
-      DB_HOST: host.docker.internal
+      DB_HOST: mariadb # host.docker.internal
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
