Erreur deploiement Railway : maj docker-compose 4

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,11 @@ services:
       dockerfile: Dockerfile
     ports:
       - "80:80" # Permet l'accès à Nginx via le port 80
-      - "443:443" # Si tu utilises HTTPS
+      # - "443:443" # Si tu utilises HTTPS
     depends_on:
       - backend
-    networks:
-      - my_network
+    # networks:
+    #   - my_network
 
   mariadb:
     image: mariadb:latest
@@ -22,10 +22,10 @@ services:
       MYSQL_DATABASE: ${DB_NAME}
     ports:
       - "3307:3306"
-    volumes:
-      - mariadb_data:/var/lib/mysql
-    networks:
-      - my_network
+    # volumes:
+    #   - mariadb_data:/var/lib/mysql
+    # networks:
+    #   - my_network
 
   backend:
     image: thifanie/cinephoria-backend:v1.0
@@ -41,11 +41,11 @@ services:
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
-    networks:
-      - my_network
+#     networks:
+#       - my_network
 
-networks:
-  my_network:
+# networks:
+#   my_network:
 
-volumes:
-  mariadb_data:
+# volumes:
+#   mariadb_data:
