--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,19 +14,6 @@ services:
     networks:
       - my_network
 
-  mariadb:
-    image: mariadb:latest
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      MYSQL_DATABASE: ${DB_NAME}
-    ports:
-      - "3307:3306"
-    volumes:
-      - mariadb_data:/var/lib/mysql
-    networks:
-      - my_network
-
   backend:
     image: cinephoria-backend
     build:
@@ -34,13 +21,12 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
-    depends_on:
-      - mariadb
     environment:
-      DB_HOST: host.docker.internal
+      DB_HOST: ${DB_HOST}
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME}
+      DB_PORT: ${DB_PORT}
     networks:
       - my_network
 
