--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "mariadb": "^3.4.0"
+    "mysql2": "^3.13.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
