--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: ./frontend
       args:
-        API_URL: http://backend:3000/api
+        API_URL: cinephoria-backend-production.up.railway.app
       dockerfile: Dockerfile
     ports:
       - "80:80" # Permet l'accès à Nginx via le port 80
