--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -13,7 +13,7 @@ server {
     # Proxy pour l'API du backend
     location /api/ {
         rewrite ^/api/(.*) /$1 break;
-        proxy_pass http://backend:3000;  # Si ton backend tourne sur un conteneur nommé "backend" et écoute sur le port 3000
+        proxy_pass cinephoria-backend-production.up.railway.app;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
