--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -13,7 +13,7 @@ server {
     # Proxy pour l'API du backend
     location /api/ {
         rewrite ^/api/(.*) /$1 break;
-        proxy_pass https://cinephoria-backend-production.up.railway.app;
+        proxy_pass https://cinephoria-backend-production.up.railway.app/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
