--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sonar": "npx sonarqube-scanner"
   },
   "dependencies": {
     "@angular/common": "^19.0.0",
@@ -23,6 +24,7 @@
     "mariadb": "^3.4.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "sonarqube-scanner": "^4.2.8"
   }
 }
