--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "sonar": "npx sonarqube-scanner"
   },
   "dependencies": {
     "@angular/animations": "^19.0.0",
@@ -44,6 +45,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "sonarqube-scanner": "^4.2.8",
     "typescript": "~5.6.2"
   }
 }
