--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,17 +25,19 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
-    "@angular/ssr": "^19.1.5",
+    "@angular/ssr": "^19.0.0",
     "@babel/runtime": "^7.26.10",
+    "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "vite": "^6.2.2",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.5",
+    "@angular-devkit/build-angular": "^19.0.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
@@ -48,5 +50,9 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "sonarqube-scanner": "^4.2.8",
     "typescript": "~5.6.2"
+  },
+  "overrides": {
+    "axios": "^1.8.2",
+    "@babel/runtime": "^7.26.10"
   }
 }
