--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "url": "^0.11.4",
     "vite": "^6.2.2",
     "zone.js": "~0.15.0"
   },
