--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "mariadb": "^3.4.0"
+    "mariadb": "^3.4.0",
+    "mongoose": "^8.13.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
