--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,11 +2,11 @@
   "name": "cinephoria-angular",
   "version": "0.0.0",
   "description": "Application front-end Angular",
-  "main": "src/main.ts",
+  "main": "src/main.js",
   "type": "commonjs",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "electron .",
     "build": "ng build cinephoria-web --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -14,8 +14,6 @@
     "e2e": "ng e2e",
     "sonar": "npx sonarqube-scanner"
   },
-  "author": "Thifanie CHRISTINE",
-  "license": "",
   "dependencies": {
     "@angular/animations": "^19.0.0",
     "@angular/cli": "^19.0.0",
@@ -44,7 +42,6 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
-    "electron": "^35.1.2",
     "esbuild": "^0.25.1",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
