--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,19 +1,22 @@
 {
   "name": "cinephoria-angular",
   "version": "0.0.0",
+  "author": "Thifanie CHRISTINE",
   "description": "Application front-end Angular",
   "main": "src/main.js",
   "type": "commonjs",
   "scripts": {
     "ng": "ng",
-    "start": "ng start",
+    "start": "electron-forge start",
     "build": "ng build cinephoria-web --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "sonar": "npx sonarqube-scanner",
-    "electron": "ng build cinephoria-web --configuration production && electron ."
+    "electron": "ng build cinephoria-web --configuration production && electron .",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "dependencies": {
     "@angular/animations": "^19.0.0",
@@ -31,6 +34,7 @@
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "electron-squirrel-startup": "^1.0.1",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -40,6 +44,14 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.0",
+    "@electron-forge/cli": "^7.8.0",
+    "@electron-forge/maker-deb": "^7.8.0",
+    "@electron-forge/maker-rpm": "^7.8.0",
+    "@electron-forge/maker-squirrel": "^7.8.0",
+    "@electron-forge/maker-zip": "^7.8.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.8.0",
+    "@electron-forge/plugin-fuses": "^7.8.0",
+    "@electron/fuses": "^1.8.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
