--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -78,6 +78,7 @@
           "options": {
             "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
+            "karmaConfig": "./karma.conf.js",
             "assets": [
               {
                 "glob": "**/*",
@@ -85,7 +86,9 @@
               }
             ],
             "styles": ["src/styles.css"],
-            "scripts": []
+            "scripts": [],
+            "codeCoverage": true,
+            "codeCoverageExclude": ["**/test.ts", "**/node_modules/**"]
           }
         }
       }
