--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mariadb": "^3.4.0",
-    "mongoose": "^8.13.0"
+    "mongoose": "^8.13.0",
+    "validator": "^13.15.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
