--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "dotenv": "^16.5.0",
     "electron-squirrel-startup": "^1.0.1",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
