Maj images Dockerfiles

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 # Stage 1 : Compiler et construire l'application Angular
 
 # Téléchargement de l'image node pour installer les dépendances du projet
-FROM node:18-alpine3.19 AS build
+FROM node:23-slim AS build
 
 # Crée un utilisateur non root (pour éviter que quelqu'un exploite une faille avec les droits root)
 RUN addgroup -S appgroup && adduser -S appuser -G appgroup
