--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 # Stage 1 : Compiler et construire l'application Angular
 
 # Téléchargement de l'image node pour installer les dépendances du projet
-FROM node:18-alpine3.19 AS build
+FROM node:23-slim AS build
 
 WORKDIR /app
 
@@ -18,7 +18,7 @@ RUN npm run build
 # Stage 2 : Mettre à disposition un serveur web nginx
 
 # Téléchargement d'une image nginx
-FROM nginx:alpine3.19
+FROM nginx:stable-alpine
 
 # Définir un argument API_URL (avec une valeur par défaut pour éviter les erreurs)
 ARG API_URL=http://backend:3000/api
